# rust-hiae

./: .gitignore  Cargo.toml  README.md
benches/: hiae_bench.rs
examples/: basic_usage.rs
src/: core.rs  error.rs  lib.rs  utils.rs
src/intrinsics/: aarch64.rs  fallback.rs  mod.rs  x86_64.rs
src/tests/: mod.rs  vectors.rs
