[package]
name = "hiae"
version = "0.1.1"
edition = "2021"
authors = ["Frank Denis"]
description = "High-throughput Authenticated Encryption (HiAE) algorithm implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hiae-aead/draft-pham-hiae"
keywords = ["cryptography", "aead", "encryption", "authentication"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = []
aes-ni = []
neon = []

[dependencies]
zeroize = { version = "1.8", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.6", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1

[[bench]]
name = "hiae_bench"
harness = false

